// build.gradle (Partially showing relevant sections for setup)
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21' // Target Java 21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
dependencies {
    // Spring Boot Core dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Replace H2 with MySQL for runtime
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Testing dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes MockMvc, AssertJ, JUnit, Mockito
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // Optional but recommended for JSON serialization/deserialization in tests
    testImplementation 'com.fasterxml.jackson.core:jackson-databind'

    // Mockito integration with JUnit 5
    testImplementation 'org.mockito:mockito-junit-jupiter'
}


tasks.named('test') {
    useJUnitPlatform()
}